[package]
name = "toph"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Simple server-side html generation"
repository = "https://git.sr.ht/~eanyanwu/toph"

keywords = ["template", "html", "layout"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
url = "2.5.0"
