[package]
name = "toph"
version = "0.8.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Simple server-side html generation"
repository = "https://git.sr.ht/~eanyanwu/toph"
categories = ["template-engine"]

keywords = ["template", "html", "layout"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "deprecated" }

[dependencies]
fastrand = "2.0.1"
paste = "1.0.14"
url = "2.5.0"
